--- a/做题笔记.md
+++ b/做题笔记.md
@@ -404,3 +404,96 @@ function PrintMinNumber(numbers) {
 }
 ```
 
+
+
+## 19. splice() 方法向/从数组中添加/删除项目
+
+**定义和用法**
+
+splice() 方法向/从数组中添加/删除项目，然后返回被删除的项目。
+
+**注释：**该方***改变原始数组。
+
+**语法**
+
+```
+arrayObject.splice(index,howmany,item1,.....,itemX)
+```
+
+| 参数              | 描述                                                         |
+| :---------------- | :----------------------------------------------------------- |
+| index             | 必需。整数，规定添加/删除项目的位置，使用负数可从数组结尾处规定位置。 |
+| howmany           | 必需。要删除的项目数量。如果设置为 0，则不会删除项目。       |
+| item1, ..., itemX | 可选。向数组添加的新项目。                                   |
+
+
+
+## 20. undefined和null == 比较的情况
+
+undefined和null与任何有意义的值比较返回的都是false，但是null与undefined之间互相比较返回的是true。
+
+```javascript
+console.log(null == false);  // false
+console.log(null == true);  // false
+console.log(undefined == false);  // false
+console.log(undefined == true);   // false
+console.log(undefined == null);  // true
+console.log(undefined == undefined);  // true
+console.log(null == null);  // true
+```
+
+
+
+## 21. call () apply () 
+
+call () 需要传递明确几个参数，写全，
+
+apply（） 可以接收一个数组作为参数，不管数组中有多少个元素
+
+```js
+// var a = [1,4,5,2,9];
+// 下面求a中最大值正确的是
+Math.max.apply(null,a)
+用 call 的话
+Math.max.call(null,...a);
+```
+
+
+
+## 22. js 的全局函数，全局属性
+
+js的**全局属性**：Infinity、NAN、undefined
+
+js的**全局函数**：decodeURI()、decodeURIcomponent()、
+
+​            encodeURI、encodeURIcomponent()、
+
+​             **escape**()、**eval**()、isFinite()、isNAN()、
+
+​            Number()、parseFloat()、parseInt()、String()、unescape()。
+
+注意：setTimeout 不是全局函数
+
+
+
+## 23. 事件能否冒泡
+
+![](./myInterview/pics/事件能否冒泡.png)
+
+
+
+## 24. 属性继承
+
+继承就是指子节点默认使用父节点的样式属性。 
+
+不可继承的属性太多了不要背，记住可以继承的属性有哪些就行了。
+
+可以继承的属性很少，只有**颜色，文字，字体间距行高对齐方式，和列表的样式**可以继承。 
+
+所有元素可继承：visibility和cursor。 
+
+内联元素可继承：letter-spacing、word-spacing、white-space、line-height、color、font、font-family、font-size、font-style、font-variant、font-weight、text-decoration、text-transform、direction。 
+
+终端块状元素可继承：text-indent和text-align。 
+
+列表元素可继承：list-style、list-style-type、list-style-position、list-style-image。
