--- a/myInterview/远景智能一面20210331.md
+++ b/myInterview/远景智能一面20210331.md
@@ -1204,6 +1204,62 @@
 
     
 
+    `async`和`await`关键字让我们可以用一种更简洁的方式写出基于[`Promise`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise)的异步行为，而无需刻意地链式调用`promise`。
+
+    
+
+    ## [组合](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Using_promises#组合)
+
+    [`Promise.resolve()`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise/resolve) 和 [`Promise.reject()`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise/reject) 是手动创建一个已经 resolve 或者 reject 的 Promise 快捷方法。它们有时很有用。
+
+    [`Promise.all()`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise/all) 和 [`Promise.race()`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise/race) 是并行运行异步操作的两个组合式工具。
+
+    我们可以发起并行操作，然后等多个操作全部结束后进行下一步操作，如下：
+
+    ```js
+    Promise.all([func1(), func2(), func3()])
+    .then(([result1, result2, result3]) => { /* use result1, result2 and result3 */ });
+    ```
+
+    可以使用一些聪明的 JavaScript 写法实现时序组合：
+
+    ```js
+    [func1, func2, func3].reduce((p, f) => p.then(f), Promise.resolve())
+    .then(result3 => { /* use result3 */ });
+    ```
+
+    通常，我们递归调用一个由异步函数组成的数组时，相当于一个 Promise 链：
+
+    ```js
+    Promise.resolve().then(func1).then(func2).then(func3);
+    ```
+
+    我们也可以写成可复用的函数形式，这在函数式编程中极为普遍：
+
+    ```js
+    const applyAsync = (acc,val) => acc.then(val);
+    const composeAsync = (...funcs) => x => funcs.reduce(applyAsync, Promise.resolve(x));
+    ```
+
+    `composeAsync()` 函数将会接受任意数量的函数作为其参数，并返回一个新的函数，该函数接受一个通过 composition pipeline 传入的初始值。这对我们来说非常有益，因为任一函数可以是异步或同步的，它们能被保证按顺序执行：
+
+    ```js
+    const transformData = composeAsync(func1, func2, func3);
+    const result3 = transformData(data);
+    ```
+
+    在 ECMAScript 2017 标准中, 时序组合可以通过使用 `async/await` 而变得更简单：
+
+    ```js
+    let result;
+    for (const f of [func1, func2, func3]) {
+      result = await f(result);
+    }
+    /* use last result (i.e. result3) */
+    ```
+
+    
+
 23. **变量提升，函数提升**，说代码的输出
 
     > https://developer.mozilla.org/zh-CN/docs/Glossary/Hoisting
@@ -1274,28 +1330,28 @@
     正是由于 JS 存在变量提升，所以程序执行，fn 和 fn2 函数提升被声明，然后再去执行下面的代码，就可以正常通过编译执行，是不是很香呢？最后得出结论为，变量提升存在的根本原因就是为了解决函数间互相调用的情况。
 
 
-    
+​    
 
     ### 只有声明被提升
-
+    
     JavaScript 只会提升声明，不会提升其初始化。如果一个变量先被使用再被声明和赋值的话，使用时的值是 undefined。参见例子：
-
+    
     ```js
     console.log(num); // Returns undefined
     var num;
     num = 6;
     ```
-
+    
     如果你先赋值、再使用、最后声明该变量，使用时能获取到所赋的值
-
+    
     ```js
     num = 6;
     console.log(num); // returns 6
     var num;
     ```
-
+    
     再来看几个类似的例子：
-
+    
     ```js
     // Example 1 - only y is hoisted
     var x = 1;                 // 声明 + 初始化 x
@@ -1314,17 +1370,17 @@
     console.log(a + "" + b); // 'Cranberry'
     var a, b;                // Declare both a & b for hoisting
     ```
-
+    
     ## `const` 和 `let`：暂时死区
-
+    
     进入变量作用域与执行声明之间的这段时间被称为该变量的**暂时死区**（TDZ）：
-
+    
     - 在此期间，该变量被认为是未初始化的（就好像它有一个特殊的值）。
     - 如果你访问一个未初始化的变量，你会得到一个 `ReferenceError`。
     - 一旦你执行到了变量声明，这个变量将被设置为初始化的值（通过赋值符号指定）或者 `undefined` —— 如果没有初始化的话。
-
+    
     以下代码阐释了暂时死区：
-
+    
     ```js
     if (true) { // 进入 `tmp` 的作用域，TDZ 开始
       // `tmp` 未被初始化：
@@ -1336,9 +1392,9 @@
     }
     复制代码
     ```
-
+    
     下一个例子表明暂时死区是真的`暂时的`（与时间有关）：
-
+    
     ```js
     if (true) { // 进入 `myVar` 作用域，TDZ 开始
       const func = () => {
@@ -1353,29 +1409,29 @@
     }
     复制代码
     ```
-
+    
     即使 `func()` 声明位于 `myVar` 声明之前且使用了该变量，我们仍然可以调用 `func()`。但是我们必须等到 `myVar` 的暂时死区结束之后。
-
+    
     ## 函数声明与提前激活
-
+    
     无论一个函数声明在作用域内的什么位置，它都会在进入作用域时执行。这使你可以在 `foo()` 函数声明前调用它。
-
+    
     ```js
     assert.equal(foo(), 123); // OK
     function foo() { return 123; }
     复制代码
     ```
-
+    
     提前激活 `foo()` 意味着上述代码相当于：
-
+    
     ```js
     function foo() { return 123; }
     assert.equal(foo(), 123);
     复制代码
     ```
-
+    
     如果你用 `const` 或 `let` 声明一个函数，那么它就不会被提前激活：在下面的例子中，你只能在 `bar()` 声明后调用它。
-
+    
     ```javascript
     assert.throws(
       () => bar(), // 声明前
@@ -1385,19 +1441,20 @@
     
     assert.equal(bar(), 123); // 声明后
     ```
-
+    
     在 ES6 新标准中，提供了 **let和 const**来声明变量，如果我们用 let和 const在声明之前使用了 a，程序就会抛出错误。我们把这个错误叫做暂时性死区，就是说我们不能在变量声明之前使用变量。
-
+    
     那么问题来了，var和 let/const声明的变量除了变量提升外，有什么本质上的区别呢？
-
+    
     第一，**var声明的全局变量会绑定在window对象上，而 let和 const 声明的变量不会挂在到全局变量 window上。**
-
+    
     第二，let和 const 区别就是，后者不能进行二次赋值。
 
-    
+
+​    
 
     **题目解析：**
-
+    
     ```js
     console.log(foo())
     function foo() {
@@ -1413,14 +1470,15 @@
     	}
     }
     ```
-
+    
     程序执行，创建一个执行环境（词法环境），然后下一步将可以进行提升的变量进行提升，我们上边说过有哪几类是**不能提升的**？**箭头函数、表达式**。而且**函数的提升会优先于变量的提升**。说到这里，你一定知道这个题答案了，很明显的，答案为 8 。
 
-    
 
-    
+​    
 
-    
+​    
+
+​    
 
 24. 对**闭包**的理解？
 
