--- a/myInterview/网易雷火一面20210325.md
+++ b/myInterview/网易雷火一面20210325.md
@@ -27,7 +27,7 @@
 
     和标准 W3C 盒子模型不同的是：IE 盒子模型的 content 部分包含了 border 和 pading。
     
-    IE模型元素宽度width=content+padding，高度计算相同
+    IE模型元素宽度width=content+padding+border，高度计算相同
         标准模型元素宽度width=content，高度计算相同
     
     通过css3新增的属性 box-sizing: content-box | border-box分别设置盒模型为标准模型（content-box）和IE模型（border-box）。
