--- a/做题笔记.md
+++ b/做题笔记.md
@@ -497,3 +497,17 @@ js的**全局函数**：decodeURI()、decodeURIcomponent()、
 终端块状元素可继承：text-indent和text-align。 
 
 列表元素可继承：list-style、list-style-type、list-style-position、list-style-image。
+
+## **25.JSON** 属性名称
+
+属性名称必须是**双引号**括起来的字符串；最后一个属性后不能有逗号。
+
+
+
+<details>
+    <summary>JSON 属性名称</summary>
+
+```
+属性名称必须是**双引号**括起来的字符串；最后一个属性后不能有逗号。
+```
+</details>
