--- a/myInterview/远景智能一面20210331.md
+++ b/myInterview/远景智能一面20210331.md
@@ -308,7 +308,7 @@
    > https://segmentfault.com/a/1190000011145364
 
    **什么是同源策略？**
-   同源策略/SOP（Same origin policy）是一种约定，由Netscape公司1995年引入浏览器，它是浏览器最核心也最基本的安全功能，如果缺少了同源策略，浏览器很容易受到XSS、CSFR等攻击。所谓同源是指"协议+域名+端口"三者相同，即便两个不同的域名指向同一个ip地址，也非同源。
+   同源策略/SOP（Same origin policy）是一种约定，由Netscape公司1995年引入浏览器，它是浏览器最核心也最基本的安全功能，如果缺少了同源策略，浏览器很容易受到XSS、CSFR等攻击。所谓同源是指**"协议+域名+端口"**三者相同，即便两个不同的域名指向同一个ip地址，也非同源。
 
    同源策略限制以下几种行为：
 
@@ -361,7 +361,7 @@
 
    1.）原生实现：
 
-   ```
+   ```js
     <script>
        var script = document.createElement('script');
        script.type = 'text/javascript';
@@ -379,7 +379,7 @@
 
    服务端返回如下（返回时即执行全局函数）：
 
-   ```
+   ```js
    handleCallback({"status": true, "user": "admin"})
    ```
 
@@ -453,7 +453,7 @@
 
    cookie过去用来存储用户登录状态，现在都是用localStorage通过存token来操作。
 
-   缺点：
+   **缺点：**
 
    （1）Cookie可以将登陆的用户名和密码等存储到cookie中，下次登陆可省去重新输入，简化了流程。但每个HTTP请求头都带上cookie信息，增加请求数据量。
 
@@ -1045,7 +1045,7 @@
 
     1、谈一谈箭头函数与普通函数的区别？
 
-    箭头函数简化了函数的定义， 
+       箭头函数简化了函数的定义， 
 
     （1）函数体内的**this**对象，**定义时确定，总指向上级作用域中的this**。
 
@@ -1484,7 +1484,7 @@
 
     闭包的定义其实很简单：函数 A 内部有一个函数 B，函数 B 可以访问到函数 A 中的变量，那么函数 B 就是闭包。
 
-    > 红宝书(p178)上对于闭包的定义：闭包是指有权访问另外一个函数作用域中的变量的函数，
+    > 红宝书(p178)上对于闭包的定义：**闭包是指有权访问另外一个函数作用域中的变量的函数**，
 
     > MDN 对闭包的定义为：闭包是指那些能够访问自由变量的函数。 （其中自由变量，指在函数中使用的，但既不是函数参数arguments也不是函数的局部变量的变量，其实就是另外一个函数作用域中的变量。）
 
@@ -1615,7 +1615,7 @@
 
     
 
-27. JS在执行前会预先创建好执行环境变量，但由于其弱类型语言特征，其变量和函数可同时定义并赋值，为保证执行环境的完整性，及函数执行的有效性，JS会在编译阶段将所有变量、函数的声明事先放入内存，以保证其可访问性。从代码结构来看，好像是把所有变量的声明、函数的声明都放在代码头部事先执行一样；
+27. JS在执行前会**预先创建好执行环境变量**，但由于其弱类型语言特征，其变量和函数可同时定义并赋值，为保证执行环境的完整性，及函数执行的有效性，JS会在编译阶段将所有**变量、函数的声明**事先放入内存，以保证其可访问性。从代码结构来看，好像是把所有变量的声明、函数的声明都放在代码头部事先执行一样；
 
 ​		
 
