--- a/myInterview/酷家乐一面20210329.md
+++ b/myInterview/酷家乐一面20210329.md
@@ -17,8 +17,12 @@
 1. 页面加载时，**script 脚本的加载顺序**是怎么样的？回答了依次从上到下，问有无其他情况？
 
    **script标签中的defer和async属性区别**
-   （1）defer属性规定是否延迟执行脚本，直到页面加载完为止。async属性规定脚本一旦可用，就异步执行。
-   （2）defer并行加载js文件，但会按照页面上script标签的执行顺序执行。async并行加载js文件，加载完成就立即执行，不会按照页面上script标签的执行顺序执行。defer缩短了页面加载时间。
+   （1）defer属性规定是否延迟执行脚本，直到页面加载完为止。
+
+   ​         async属性规定脚本一旦可用，就异步执行。
+   （2）defer并行加载js文件，但会按照页面上script标签的执行顺序执行。
+
+   ​         async并行加载js文件，加载完成就立即执行，不会按照页面上script标签的执行顺序执行。defer缩短了页面加载时间。
 
    **当浏览器碰到 script 脚本的时候：**
    （1）<script src="script.js"></script>
