--- a/myInterview/网易雷火一面20210325.md
+++ b/myInterview/网易雷火一面20210325.md
@@ -27,10 +27,17 @@
 
     和标准 W3C 盒子模型不同的是：IE 盒子模型的 content 部分包含了 border 和 pading。
     
+    宽高同理：
     IE模型元素宽度width=content+padding+border，高度计算相同
-        标准模型元素宽度width=content，高度计算相同
+    标准模型元素宽度width=content，高度计算相同
     
     通过css3新增的属性 box-sizing: content-box | border-box分别设置盒模型为标准模型（content-box）和IE模型（border-box）。
+    
+    Note: 对于新的web站点，你可能希望首先将box-sizing设置为border-box，如下所示：
+    
+    * { box-sizing: border-box; }
+    
+    这使得处理元素大小的工作变得容易得多，并且通常消除了在布局内容时可能遇到的许多陷阱。然而，在某些情况下，你应谨慎使用这个属性。例如： 你正在编写一个将由其他人使用的共享组件库，如果他们网站的其余部分没有设置此值，他们可能会发现很难使用你的组件库。
     ```
 
 ​	
@@ -39,8 +46,7 @@
     ```
     css盒子属性box-sizing，控制元素盒模型的解析模式。box-sizing: 
     （1）content-box（默认W3C标准盒模型）：盒子大小=width(content)+padding+border。
-    （2）padding-box：盒子大小= width(content+padding)+border。
-    （3）border-box(IE传统盒模型，IE8以下怪异模式)：盒子大小= width(content+padding+border)
+    （2）border-box(IE传统盒模型，IE8以下怪异模式)：盒子大小= width(content+padding+border)
     ```
 
   
@@ -69,7 +75,7 @@
    ## fixed
    
     生成绝对定位的元素，相对于浏览器窗口进行定位。元素的位置通过 "left", "top", "right" 以及 "bottom" 属性进行规定。
-   
+    
    ## sticky
    
    ***定义***
@@ -396,7 +402,7 @@ class Student extends People{
 
 18. **深拷贝**具体是怎么实现的？应用场景是什么？
 
-   ```
+   ```js
 /*浅拷贝和深拷贝都只针对于引用数据类型。
    浅拷贝只复制指向某个对象第一层属性值的指针，而不复制对象本身，新旧对象还是共享同一块内存；
    但深拷贝会另外创造一个一模一样的对象，新对象跟原对象不共享内存，修改新对象不会改变原对象；
