--- a/做题笔记.md
+++ b/做题笔记.md
@@ -511,3 +511,36 @@ js的**全局函数**：decodeURI()、decodeURIcomponent()、
 属性名称必须是**双引号**括起来的字符串；最后一个属性后不能有逗号。
 ```
 </details>
+
+
+
+## 26.正则表达式替换字符串中所有的“多个空格”记得加 g 修饰符
+
+```js
+let s = "a good   example";
+s.trim().replace(/\s+/, ' ') // 没有加 g，输出为 ：“a-good   example”，第二个空格没有被替换
+
+s.trim().replace(/\s+/g, '-') // 加了 g ，输出为：“a-good-example”
+```
+
+
+
+## 27.split( ) 第一个参数可以是正则表达式
+
+```js
+str.split([separator[, limit]])
+```
+
+`separator`
+指定表示每个拆分应发生的点的字符串。`separator` 可以是一个字符串或**正则表达式**。
+
+```js
+
+var reverseWords = function(s) {
+    // 自己的做法：
+    return s.trim().replace(/\s+/g, ' ').split(' ').reverse().join(' ');
+    // split 使用正则：
+    return s.trim().split(/\s+/).reverse().join(' ');
+};
+```
+
