--- a/做题笔记.md
+++ b/做题笔记.md
@@ -544,3 +544,14 @@ var reverseWords = function(s) {
 };
 ```
 
+
+
+## 28. Number(' ') 遇到空字符串的话结果是 0
+
+```js
+console.log(Number('   ')); // 0
+console.log(Number('')); // 0
+
+Number('foo')     // NaN
+```
+
